tests/parser-test-files/parse-expression.txt
================================================================================
1 Parse expression
================================================================================

(package coalton-unit-tests)

(define f 5)

================================================================================
2 Parse expression
================================================================================

(package coalton-unit-tests)

(define (f _x) 5)

================================================================================
3 Parse expression
================================================================================

(package coalton-unit-tests)

(define (f _x _y) 5)

================================================================================
4 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define f
  (fn (x)
    (+ x x)))

================================================================================
5 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define f
  (fn ()
    (+ 1 2)))

================================================================================
6 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f)
  (let ((x (the UFix 1))
        (declare y (Unit -> UFix))
        (y (fn () (+ 1 2))))
    (+ x (y))))

================================================================================
7 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f a b c)
  (lisp Integer (a b c)
    (cl:+ a b c)))

================================================================================
8 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(declare f ((Default :a) => (Optional :a) -> :a))
  (define (f x)
    (match x
      ((Some y) y)
      (_ (default))))

================================================================================
9 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f)
    (let x = 1)
    (let ((y (from-some "invalid y" (Some 2))))
      (+ x y)))

================================================================================
10 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define f
  (the String "value"))

================================================================================
11 Parse expression
================================================================================

(package coalton-unit-tests)

(define (x) (return))

================================================================================
12 Parse expression
================================================================================

(package coalton-unit-tests)

(define (y) (return 5))

================================================================================
13 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define z (+ 1 (+ 2 (* 3 5))))

================================================================================
14 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f)
  (progn
    (let x = 1)
    (f x)
    (let y = 2)
    (+ x y)))

================================================================================
15 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f x y)
  (if (== x y)
    1
    2))

================================================================================
16 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f x y)
  (when (== x y)
    (let _z = 3)
    (print "hello"))
  (unless (== x y)
    (let _z = 4)
    (print "hello")))

================================================================================
17 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define (f ax bx)
  (do
   (a <- ax)
   (b <- bx)
    (let c = (+ a b))
    (pure c)))

================================================================================
18 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define x
  (cond 
    (True 1)
    ((> 2 3) 2)))

================================================================================
19 Parse expression
================================================================================

(package coalton-unit-tests/prelude
  (import coalton-prelude))

(define x
  (fn ((Tuple x _y)) x))

================================================================================
100 Malformed expression
================================================================================

(package test-package)

(define x ())

--------------------------------------------------------------------------------

error: Malformed expression
  --> test:3:10
   |
 3 |  (define x ())
   |            ^^ unexpected `nil` or `()`

================================================================================
101 Malformed expression
================================================================================

(package test-package)

(define x (f . x))

--------------------------------------------------------------------------------

error: Malformed expression
  --> test:3:10
   |
 3 |  (define x (f . x))
   |            ^^^^^^^ unexpected dotted list

================================================================================
102 Invalid literal
================================================================================

(package test-package)

(define x #C(1 2))

--------------------------------------------------------------------------------

error: Invalid literal
  --> test:3:10
   |
 3 |  (define x #C(1 2))
   |            ^^^^^^^ unknown literal type

================================================================================
103 Malformed expression
================================================================================

(package test-package)

(define x (f . 3))

--------------------------------------------------------------------------------

error: Malformed expression
  --> test:3:10
   |
 3 |  (define x (f . 3))
   |            ^^^^^^^ unexpected dotted list

================================================================================
104 Nonexhaustive match
================================================================================

(package coalton-unit-tests)

(define (g x)
  (match x))

--------------------------------------------------------------------------------

warn: non-exhaustive match
  --> test:4:2
   |
 4 |    (match x))
   |    ^^^^^^^^^ non-exhaustive match
   |    --------- missing case "_"
